@@ -1,19 +1,21 @@
 Unique default colours starting at the top with red.
 
-#E31A1C
+#E31A1C - Strong Red
 
-#A6CEE3
+#33A02C - Dark Lime Green
 
-#1F78B4
+#1F78B4 - Strong Blue
 
-#B2DF8A
+#FF7F00 - Strong Orange
 
-#33A02C
+#CAB2D6 - Grayish Violet
 
-#F69A99
+#F69A99 - Very Soft Red
 
-#FDBF6F
+#B2DF8A - Very Soft Green
 
-#FF7F00
+#A6CEE3 - Very Soft Blue
 
-#CAB2D6
+#FDBF6F - Soft Orange
+
+
