@@ -315,35 +315,35 @@
 
     <ChannelMetadata>
         <ChannelLabel>Temperature</ChannelLabel>
-        <ChannelColour>#F15854</ChannelColour>
+        <ChannelColour>#E31A1C</ChannelColour>
         <ChannelDataTypeName>DecimalInteger</ChannelDataTypeName>
         <ChannelUnit>Celsius</ChannelUnit>
     </ChannelMetadata>
 
     <ChannelMetadata>
         <ChannelLabel>Channel 0</ChannelLabel>
-        <ChannelColour>#5DA5DA</ChannelColour>
+        <ChannelColour>#33A02C</ChannelColour>
         <ChannelDataTypeName>DecimalInteger</ChannelDataTypeName>
         <ChannelUnit>mV</ChannelUnit>
     </ChannelMetadata>
 
     <ChannelMetadata>
         <ChannelLabel>Channel 1</ChannelLabel>
-        <ChannelColour>#DECF3F</ChannelColour>
+        <ChannelColour>#1F78B4</ChannelColour>
         <ChannelDataTypeName>DecimalInteger</ChannelDataTypeName>
         <ChannelUnit>mV</ChannelUnit>
     </ChannelMetadata>
 
     <ChannelMetadata>
         <ChannelLabel>Channel 2</ChannelLabel>
-        <ChannelColour>#60BD68</ChannelColour>
+        <ChannelColour>#FF7F00</ChannelColour>
         <ChannelDataTypeName>DecimalInteger</ChannelDataTypeName>
         <ChannelUnit>mV</ChannelUnit>
     </ChannelMetadata>
 
     <ChannelMetadata>
         <ChannelLabel>Channel 3</ChannelLabel>
-        <ChannelColour>#B2912F</ChannelColour>
+        <ChannelColour>#CAB2D6</ChannelColour>
         <ChannelDataTypeName>DecimalInteger</ChannelDataTypeName>
         <ChannelUnit>mV</ChannelUnit>
     </ChannelMetadata>
